--- a/LibraryUsingLibrary_VB_CrossPlatform/project.json
+++ b/LibraryUsingLibrary_VB_CrossPlatform/project.json
@@ -1,9 +1,10 @@
 {
   "name": "LibraryUsingLibrary_VB_CrossPlatform",
+  "projectId": "664193e5-e5f6-4047-a441-d8682201dd83",
   "description": "Library Using Library VB Cross Platform",
   "main": "NewActivity.xaml",
   "dependencies": {
-    "Acme.ReusableComponents.SAP": "1.2.134325051-27",
+    "Acme.ReusableComponents.SAP": "1.2.134325051",
     "UiPath.System.Activities": "23.4.2",
     "UiPath.Testing.Activities": "23.4.0",
     "UiPath.UIAutomation.Activities": "23.4.4",
@@ -51,7 +52,7 @@
         "fileName": "TestCase.xaml"
       }
     ],
-    "modernBehavior": true
+    "saveToCloud": false
   },
   "expressionLanguage": "VisualBasic",
   "isTemplate": false,
