change project name

--- a/Process_PortableVB/project.json
+++ b/Process_PortableVB/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "Process_PortableVB",
+  "name": "Process_PortableVB_Tests",
   "projectId": "74b420d0-5758-4e0b-a60e-764b09809437",
   "description": "Blank Process",
   "main": "Main.xaml",
